# CSDLib

./: .gitignore  .lgtm.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  install.sh  lgtm.yml  test  test.txt  unit_test.sh
CSDBot_discord/: bot.py  help_bot.py  requirements.txt
CSDLib/includes/: CSDLib.h  array_int_management.h  array_str_management.h  file_management.h  garbage_collector.h  generic_system_linked_list.h
CSDLib/src/: array_int_management.c  array_str_management.c  file_management.c  garbage_collector.c  generic_system_linked_list.c  string_management.c
CSDLib/unit_tests/: CMakeLists.txt  test_array_int.c  test_array_str.c  test_string.c
Test CSDLib/: Makefile
Test CSDLib/src/: main.c
doc/.mydoc_CSDLib/: Makefile  file.txt  mydoc_CSDLib
doc/.mydoc_CSDLib/src/: main.c
doc/mydoc_CSDLib/: array_int.txt
examples_CSDLib/: Makefile  asigment_str.txt  test_CSDLIB
examples_CSDLib/src/: main.c
include/: include.h
includes/: CSDLib.h  array_int_management.h  array_str_management.h  file_management.h  generic_system_linked_list.h  include.h  linked_list.h  string_management.h
src/: array_int_management.c  array_str_management.c  file_management.c  generic_system_linked_list.c  linked_list.c  main.c  string_management.c
test_criterion/: CMakeLists.txt  test_array_int.c  test_array_str.c  test_linked_list.c  test_string.c
